--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Untitled</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>BoyBands and Vegetables</title>
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="author" href="humans.txt">
   </head>
   <body>
